parser.output
Terminals unused in grammar

   for_token
   switch_token
   case_token
   default_token


Grammar

    0 $accept: Program $end

    1 Program: Program Statement
    2        | Statement

    3 Statement: Proto '{' Block '}'

    4 Block: Block Loop_or_E
    5      | Loop_or_E

    6 Loop_or_E: Loop
    7          | E ';'

    8 Loop: if_token '(' E ')' '{' Block '}' else_token '{' Block '}'
    9     | if_token '(' E ')' '{' Block '}'
   10     | while_token '(' E ')' '{' Block '}'

   11 Proto: Type id_token '(' Args ')'

   12 Type: int_token
   13     | char_token
   14     | double_token

   15 Args: Args ',' TypeArg
   16     | TypeArg
   17     | %empty

   18 TypeArg: double_token id_token
   19        | int_token id_token
   20        | char_token id_token

   21 E: E '+' E
   22  | E '-' E
   23  | E '*' E
   24  | E '/' E
   25  | E '>' E
   26  | E '<' E
   27  | E eq_token E
   28  | id_token '=' E
   29  | TypeArg '=' E
   30  | '(' E ')'
   31  | i_num_token
   32  | d_num_token
   33  | char_token
   34  | string_token
   35  | id_token
   36  | %empty


Terminals, with rules where they appear

$end (0) 0
'(' (40) 8 9 10 11 30
')' (41) 8 9 10 11 30
'*' (42) 23
'+' (43) 21
',' (44) 15
'-' (45) 22
'/' (47) 24
';' (59) 7
'<' (60) 26
'=' (61) 28 29
'>' (62) 25
'{' (123) 3 8 9 10
'}' (125) 3 8 9 10
error (256)
if_token (258) 8 9
else_token (259) 8
while_token (260) 10
for_token (261)
switch_token (262)
case_token (263)
int_token (264) 12 19
double_token (265) 14 18
char_token (266) 13 20 33
default_token (267)
eq_token (268) 27
id_token <s> (269) 11 18 19 20 28 35
string_token <s> (270) 34
d_num_token <d> (271) 32
i_num_token <i> (272) 31


Nonterminals, with rules where they appear

$accept (31)
    on left: 0
Program (32)
    on left: 1 2, on right: 0 1
Statement (33)
    on left: 3, on right: 1 2
Block (34)
    on left: 4 5, on right: 3 4 8 9 10
Loop_or_E (35)
    on left: 6 7, on right: 4 5
Loop (36)
    on left: 8 9 10, on right: 6
Proto (37)
    on left: 11, on right: 3
Type (38)
    on left: 12 13 14, on right: 11
Args (39)
    on left: 15 16 17, on right: 11 15
TypeArg (40)
    on left: 18 19 20, on right: 15 16 29
E (41)
    on left: 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36, on right:
    7 8 9 10 21 22 23 24 25 26 27 28 29 30


State 0

    0 $accept: . Program $end

    int_token     shift, and go to state 1
    double_token  shift, and go to state 2
    char_token    shift, and go to state 3

    Program    go to state 4
    Statement  go to state 5
    Proto      go to state 6
    Type       go to state 7


State 1

   12 Type: int_token .

    $default  reduce using rule 12 (Type)


State 2

   14 Type: double_token .

    $default  reduce using rule 14 (Type)


State 3

   13 Type: char_token .

    $default  reduce using rule 13 (Type)


State 4

    0 $accept: Program . $end
    1 Program: Program . Statement

    $end          shift, and go to state 8
    int_token     shift, and go to state 1
    double_token  shift, and go to state 2
    char_token    shift, and go to state 3

    Statement  go to state 9
    Proto      go to state 6
    Type       go to state 7


State 5

    2 Program: Statement .

    $default  reduce using rule 2 (Program)


State 6

    3 Statement: Proto . '{' Block '}'

    '{'  shift, and go to state 10


State 7

   11 Proto: Type . id_token '(' Args ')'

    id_token  shift, and go to state 11


State 8

    0 $accept: Program $end .

    $default  accept


State 9

    1 Program: Program Statement .

    $default  reduce using rule 1 (Program)


State 10

    3 Statement: Proto '{' . Block '}'

    if_token      shift, and go to state 12
    while_token   shift, and go to state 13
    int_token     shift, and go to state 14
    double_token  shift, and go to state 15
    char_token    shift, and go to state 16
    id_token      shift, and go to state 17
    string_token  shift, and go to state 18
    d_num_token   shift, and go to state 19
    i_num_token   shift, and go to state 20
    '('           shift, and go to state 21

    $default  reduce using rule 36 (E)

    Block      go to state 22
    Loop_or_E  go to state 23
    Loop       go to state 24
    TypeArg    go to state 25
    E          go to state 26


State 11

   11 Proto: Type id_token . '(' Args ')'

    '('  shift, and go to state 27


State 12

    8 Loop: if_token . '(' E ')' '{' Block '}' else_token '{' Block '}'
    9     | if_token . '(' E ')' '{' Block '}'

    '('  shift, and go to state 28


State 13

   10 Loop: while_token . '(' E ')' '{' Block '}'

    '('  shift, and go to state 29


State 14

   19 TypeArg: int_token . id_token

    id_token  shift, and go to state 30


State 15

   18 TypeArg: double_token . id_token

    id_token  shift, and go to state 31


State 16

   20 TypeArg: char_token . id_token
   33 E: char_token .

    id_token  shift, and go to state 32

    $default  reduce using rule 33 (E)


State 17

   28 E: id_token . '=' E
   35  | id_token .

    '='  shift, and go to state 33

    $default  reduce using rule 35 (E)


State 18

   34 E: string_token .

    $default  reduce using rule 34 (E)


State 19

   32 E: d_num_token .

    $default  reduce using rule 32 (E)


State 20

   31 E: i_num_token .

    $default  reduce using rule 31 (E)


State 21

   30 E: '(' . E ')'

    int_token     shift, and go to state 14
    double_token  shift, and go to state 15
    char_token    shift, and go to state 16
    id_token      shift, and go to state 17
    string_token  shift, and go to state 18
    d_num_token   shift, and go to state 19
    i_num_token   shift, and go to state 20
    '('           shift, and go to state 21

    $default  reduce using rule 36 (E)

    TypeArg  go to state 25
    E        go to state 34


State 22

    3 Statement: Proto '{' Block . '}'
    4 Block: Block . Loop_or_E

    if_token      shift, and go to state 12
    while_token   shift, and go to state 13
    int_token     shift, and go to state 14
    double_token  shift, and go to state 15
    char_token    shift, and go to state 16
    id_token      shift, and go to state 17
    string_token  shift, and go to state 18
    d_num_token   shift, and go to state 19
    i_num_token   shift, and go to state 20
    '}'           shift, and go to state 35
    '('           shift, and go to state 21

    $default  reduce using rule 36 (E)

    Loop_or_E  go to state 36
    Loop       go to state 24
    TypeArg    go to state 25
    E          go to state 26


State 23

    5 Block: Loop_or_E .

    $default  reduce using rule 5 (Block)


State 24

    6 Loop_or_E: Loop .

    $default  reduce using rule 6 (Loop_or_E)


State 25

   29 E: TypeArg . '=' E

    '='  shift, and go to state 37


State 26

    7 Loop_or_E: E . ';'
   21 E: E . '+' E
   22  | E . '-' E
   23  | E . '*' E
   24  | E . '/' E
   25  | E . '>' E
   26  | E . '<' E
   27  | E . eq_token E

    eq_token  shift, and go to state 38
    '<'       shift, and go to state 39
    '>'       shift, and go to state 40
    '+'       shift, and go to state 41
    '-'       shift, and go to state 42
    '*'       shift, and go to state 43
    '/'       shift, and go to state 44
    ';'       shift, and go to state 45


State 27

   11 Proto: Type id_token '(' . Args ')'

    int_token     shift, and go to state 14
    double_token  shift, and go to state 15
    char_token    shift, and go to state 46

    $default  reduce using rule 17 (Args)

    Args     go to state 47
    TypeArg  go to state 48


State 28

    8 Loop: if_token '(' . E ')' '{' Block '}' else_token '{' Block '}'
    9     | if_token '(' . E ')' '{' Block '}'

    int_token     shift, and go to state 14
    double_token  shift, and go to state 15
    char_token    shift, and go to state 16
    id_token      shift, and go to state 17
    string_token  shift, and go to state 18
    d_num_token   shift, and go to state 19
    i_num_token   shift, and go to state 20
    '('           shift, and go to state 21

    $default  reduce using rule 36 (E)

    TypeArg  go to state 25
    E        go to state 49


State 29

   10 Loop: while_token '(' . E ')' '{' Block '}'

    int_token     shift, and go to state 14
    double_token  shift, and go to state 15
    char_token    shift, and go to state 16
    id_token      shift, and go to state 17
    string_token  shift, and go to state 18
    d_num_token   shift, and go to state 19
    i_num_token   shift, and go to state 20
    '('           shift, and go to state 21

    $default  reduce using rule 36 (E)

    TypeArg  go to state 25
    E        go to state 50


State 30

   19 TypeArg: int_token id_token .

    $default  reduce using rule 19 (TypeArg)


State 31

   18 TypeArg: double_token id_token .

    $default  reduce using rule 18 (TypeArg)


State 32

   20 TypeArg: char_token id_token .

    $default  reduce using rule 20 (TypeArg)


State 33

   28 E: id_token '=' . E

    int_token     shift, and go to state 14
    double_token  shift, and go to state 15
    char_token    shift, and go to state 16
    id_token      shift, and go to state 17
    string_token  shift, and go to state 18
    d_num_token   shift, and go to state 19
    i_num_token   shift, and go to state 20
    '('           shift, and go to state 21

    $default  reduce using rule 36 (E)

    TypeArg  go to state 25
    E        go to state 51


State 34

   21 E: E . '+' E
   22  | E . '-' E
   23  | E . '*' E
   24  | E . '/' E
   25  | E . '>' E
   26  | E . '<' E
   27  | E . eq_token E
   30  | '(' E . ')'

    eq_token  shift, and go to state 38
    '<'       shift, and go to state 39
    '>'       shift, and go to state 40
    '+'       shift, and go to state 41
    '-'       shift, and go to state 42
    '*'       shift, and go to state 43
    '/'       shift, and go to state 44
    ')'       shift, and go to state 52


State 35

    3 Statement: Proto '{' Block '}' .

    $default  reduce using rule 3 (Statement)


State 36

    4 Block: Block Loop_or_E .

    $default  reduce using rule 4 (Block)


State 37

   29 E: TypeArg '=' . E

    int_token     shift, and go to state 14
    double_token  shift, and go to state 15
    char_token    shift, and go to state 16
    id_token      shift, and go to state 17
    string_token  shift, and go to state 18
    d_num_token   shift, and go to state 19
    i_num_token   shift, and go to state 20
    '('           shift, and go to state 21

    $default  reduce using rule 36 (E)

    TypeArg  go to state 25
    E        go to state 53


State 38

   27 E: E eq_token . E

    int_token     shift, and go to state 14
    double_token  shift, and go to state 15
    char_token    shift, and go to state 16
    id_token      shift, and go to state 17
    string_token  shift, and go to state 18
    d_num_token   shift, and go to state 19
    i_num_token   shift, and go to state 20
    '('           shift, and go to state 21

    $default  reduce using rule 36 (E)

    TypeArg  go to state 25
    E        go to state 54


State 39

   26 E: E '<' . E

    int_token     shift, and go to state 14
    double_token  shift, and go to state 15
    char_token    shift, and go to state 16
    id_token      shift, and go to state 17
    string_token  shift, and go to state 18
    d_num_token   shift, and go to state 19
    i_num_token   shift, and go to state 20
    '('           shift, and go to state 21

    $default  reduce using rule 36 (E)

    TypeArg  go to state 25
    E        go to state 55


State 40

   25 E: E '>' . E

    int_token     shift, and go to state 14
    double_token  shift, and go to state 15
    char_token    shift, and go to state 16
    id_token      shift, and go to state 17
    string_token  shift, and go to state 18
    d_num_token   shift, and go to state 19
    i_num_token   shift, and go to state 20
    '('           shift, and go to state 21

    $default  reduce using rule 36 (E)

    TypeArg  go to state 25
    E        go to state 56


State 41

   21 E: E '+' . E

    int_token     shift, and go to state 14
    double_token  shift, and go to state 15
    char_token    shift, and go to state 16
    id_token      shift, and go to state 17
    string_token  shift, and go to state 18
    d_num_token   shift, and go to state 19
    i_num_token   shift, and go to state 20
    '('           shift, and go to state 21

    $default  reduce using rule 36 (E)

    TypeArg  go to state 25
    E        go to state 57


State 42

   22 E: E '-' . E

    int_token     shift, and go to state 14
    double_token  shift, and go to state 15
    char_token    shift, and go to state 16
    id_token      shift, and go to state 17
    string_token  shift, and go to state 18
    d_num_token   shift, and go to state 19
    i_num_token   shift, and go to state 20
    '('           shift, and go to state 21

    $default  reduce using rule 36 (E)

    TypeArg  go to state 25
    E        go to state 58


State 43

   23 E: E '*' . E

    int_token     shift, and go to state 14
    double_token  shift, and go to state 15
    char_token    shift, and go to state 16
    id_token      shift, and go to state 17
    string_token  shift, and go to state 18
    d_num_token   shift, and go to state 19
    i_num_token   shift, and go to state 20
    '('           shift, and go to state 21

    $default  reduce using rule 36 (E)

    TypeArg  go to state 25
    E        go to state 59


State 44

   24 E: E '/' . E

    int_token     shift, and go to state 14
    double_token  shift, and go to state 15
    char_token    shift, and go to state 16
    id_token      shift, and go to state 17
    string_token  shift, and go to state 18
    d_num_token   shift, and go to state 19
    i_num_token   shift, and go to state 20
    '('           shift, and go to state 21

    $default  reduce using rule 36 (E)

    TypeArg  go to state 25
    E        go to state 60


State 45

    7 Loop_or_E: E ';' .

    $default  reduce using rule 7 (Loop_or_E)


State 46

   20 TypeArg: char_token . id_token

    id_token  shift, and go to state 32


State 47

   11 Proto: Type id_token '(' Args . ')'
   15 Args: Args . ',' TypeArg

    ')'  shift, and go to state 61
    ','  shift, and go to state 62


State 48

   16 Args: TypeArg .

    $default  reduce using rule 16 (Args)


State 49

    8 Loop: if_token '(' E . ')' '{' Block '}' else_token '{' Block '}'
    9     | if_token '(' E . ')' '{' Block '}'
   21 E: E . '+' E
   22  | E . '-' E
   23  | E . '*' E
   24  | E . '/' E
   25  | E . '>' E
   26  | E . '<' E
   27  | E . eq_token E

    eq_token  shift, and go to state 38
    '<'       shift, and go to state 39
    '>'       shift, and go to state 40
    '+'       shift, and go to state 41
    '-'       shift, and go to state 42
    '*'       shift, and go to state 43
    '/'       shift, and go to state 44
    ')'       shift, and go to state 63


State 50

   10 Loop: while_token '(' E . ')' '{' Block '}'
   21 E: E . '+' E
   22  | E . '-' E
   23  | E . '*' E
   24  | E . '/' E
   25  | E . '>' E
   26  | E . '<' E
   27  | E . eq_token E

    eq_token  shift, and go to state 38
    '<'       shift, and go to state 39
    '>'       shift, and go to state 40
    '+'       shift, and go to state 41
    '-'       shift, and go to state 42
    '*'       shift, and go to state 43
    '/'       shift, and go to state 44
    ')'       shift, and go to state 64


State 51

   21 E: E . '+' E
   22  | E . '-' E
   23  | E . '*' E
   24  | E . '/' E
   25  | E . '>' E
   26  | E . '<' E
   27  | E . eq_token E
   28  | id_token '=' E .

    eq_token  shift, and go to state 38
    '<'       shift, and go to state 39
    '>'       shift, and go to state 40
    '+'       shift, and go to state 41
    '-'       shift, and go to state 42
    '*'       shift, and go to state 43
    '/'       shift, and go to state 44

    $default  reduce using rule 28 (E)


State 52

   30 E: '(' E ')' .

    $default  reduce using rule 30 (E)


State 53

   21 E: E . '+' E
   22  | E . '-' E
   23  | E . '*' E
   24  | E . '/' E
   25  | E . '>' E
   26  | E . '<' E
   27  | E . eq_token E
   29  | TypeArg '=' E .

    eq_token  shift, and go to state 38
    '<'       shift, and go to state 39
    '>'       shift, and go to state 40
    '+'       shift, and go to state 41
    '-'       shift, and go to state 42
    '*'       shift, and go to state 43
    '/'       shift, and go to state 44

    $default  reduce using rule 29 (E)


State 54

   21 E: E . '+' E
   22  | E . '-' E
   23  | E . '*' E
   24  | E . '/' E
   25  | E . '>' E
   26  | E . '<' E
   27  | E . eq_token E
   27  | E eq_token E .

    '+'  shift, and go to state 41
    '-'  shift, and go to state 42
    '*'  shift, and go to state 43
    '/'  shift, and go to state 44

    $default  reduce using rule 27 (E)


State 55

   21 E: E . '+' E
   22  | E . '-' E
   23  | E . '*' E
   24  | E . '/' E
   25  | E . '>' E
   26  | E . '<' E
   26  | E '<' E .
   27  | E . eq_token E

    '+'  shift, and go to state 41
    '-'  shift, and go to state 42
    '*'  shift, and go to state 43
    '/'  shift, and go to state 44

    $default  reduce using rule 26 (E)


State 56

   21 E: E . '+' E
   22  | E . '-' E
   23  | E . '*' E
   24  | E . '/' E
   25  | E . '>' E
   25  | E '>' E .
   26  | E . '<' E
   27  | E . eq_token E

    '+'  shift, and go to state 41
    '-'  shift, and go to state 42
    '*'  shift, and go to state 43
    '/'  shift, and go to state 44

    $default  reduce using rule 25 (E)


State 57

   21 E: E . '+' E
   21  | E '+' E .
   22  | E . '-' E
   23  | E . '*' E
   24  | E . '/' E
   25  | E . '>' E
   26  | E . '<' E
   27  | E . eq_token E

    '*'  shift, and go to state 43
    '/'  shift, and go to state 44

    $default  reduce using rule 21 (E)


State 58

   21 E: E . '+' E
   22  | E . '-' E
   22  | E '-' E .
   23  | E . '*' E
   24  | E . '/' E
   25  | E . '>' E
   26  | E . '<' E
   27  | E . eq_token E

    '*'  shift, and go to state 43
    '/'  shift, and go to state 44

    $default  reduce using rule 22 (E)


State 59

   21 E: E . '+' E
   22  | E . '-' E
   23  | E . '*' E
   23  | E '*' E .
   24  | E . '/' E
   25  | E . '>' E
   26  | E . '<' E
   27  | E . eq_token E

    $default  reduce using rule 23 (E)


State 60

   21 E: E . '+' E
   22  | E . '-' E
   23  | E . '*' E
   24  | E . '/' E
   24  | E '/' E .
   25  | E . '>' E
   26  | E . '<' E
   27  | E . eq_token E

    $default  reduce using rule 24 (E)


State 61

   11 Proto: Type id_token '(' Args ')' .

    $default  reduce using rule 11 (Proto)


State 62

   15 Args: Args ',' . TypeArg

    int_token     shift, and go to state 14
    double_token  shift, and go to state 15
    char_token    shift, and go to state 46

    TypeArg  go to state 65


State 63

    8 Loop: if_token '(' E ')' . '{' Block '}' else_token '{' Block '}'
    9     | if_token '(' E ')' . '{' Block '}'

    '{'  shift, and go to state 66


State 64

   10 Loop: while_token '(' E ')' . '{' Block '}'

    '{'  shift, and go to state 67


State 65

   15 Args: Args ',' TypeArg .

    $default  reduce using rule 15 (Args)


State 66

    8 Loop: if_token '(' E ')' '{' . Block '}' else_token '{' Block '}'
    9     | if_token '(' E ')' '{' . Block '}'

    if_token      shift, and go to state 12
    while_token   shift, and go to state 13
    int_token     shift, and go to state 14
    double_token  shift, and go to state 15
    char_token    shift, and go to state 16
    id_token      shift, and go to state 17
    string_token  shift, and go to state 18
    d_num_token   shift, and go to state 19
    i_num_token   shift, and go to state 20
    '('           shift, and go to state 21

    $default  reduce using rule 36 (E)

    Block      go to state 68
    Loop_or_E  go to state 23
    Loop       go to state 24
    TypeArg    go to state 25
    E          go to state 26


State 67

   10 Loop: while_token '(' E ')' '{' . Block '}'

    if_token      shift, and go to state 12
    while_token   shift, and go to state 13
    int_token     shift, and go to state 14
    double_token  shift, and go to state 15
    char_token    shift, and go to state 16
    id_token      shift, and go to state 17
    string_token  shift, and go to state 18
    d_num_token   shift, and go to state 19
    i_num_token   shift, and go to state 20
    '('           shift, and go to state 21

    $default  reduce using rule 36 (E)

    Block      go to state 69
    Loop_or_E  go to state 23
    Loop       go to state 24
    TypeArg    go to state 25
    E          go to state 26


State 68

    4 Block: Block . Loop_or_E
    8 Loop: if_token '(' E ')' '{' Block . '}' else_token '{' Block '}'
    9     | if_token '(' E ')' '{' Block . '}'

    if_token      shift, and go to state 12
    while_token   shift, and go to state 13
    int_token     shift, and go to state 14
    double_token  shift, and go to state 15
    char_token    shift, and go to state 16
    id_token      shift, and go to state 17
    string_token  shift, and go to state 18
    d_num_token   shift, and go to state 19
    i_num_token   shift, and go to state 20
    '}'           shift, and go to state 70
    '('           shift, and go to state 21

    $default  reduce using rule 36 (E)

    Loop_or_E  go to state 36
    Loop       go to state 24
    TypeArg    go to state 25
    E          go to state 26


State 69

    4 Block: Block . Loop_or_E
   10 Loop: while_token '(' E ')' '{' Block . '}'

    if_token      shift, and go to state 12
    while_token   shift, and go to state 13
    int_token     shift, and go to state 14
    double_token  shift, and go to state 15
    char_token    shift, and go to state 16
    id_token      shift, and go to state 17
    string_token  shift, and go to state 18
    d_num_token   shift, and go to state 19
    i_num_token   shift, and go to state 20
    '}'           shift, and go to state 71
    '('           shift, and go to state 21

    $default  reduce using rule 36 (E)

    Loop_or_E  go to state 36
    Loop       go to state 24
    TypeArg    go to state 25
    E          go to state 26


State 70

    8 Loop: if_token '(' E ')' '{' Block '}' . else_token '{' Block '}'
    9     | if_token '(' E ')' '{' Block '}' .

    else_token  shift, and go to state 72

    $default  reduce using rule 9 (Loop)


State 71

   10 Loop: while_token '(' E ')' '{' Block '}' .

    $default  reduce using rule 10 (Loop)


State 72

    8 Loop: if_token '(' E ')' '{' Block '}' else_token . '{' Block '}'

    '{'  shift, and go to state 73


State 73

    8 Loop: if_token '(' E ')' '{' Block '}' else_token '{' . Block '}'

    if_token      shift, and go to state 12
    while_token   shift, and go to state 13
    int_token     shift, and go to state 14
    double_token  shift, and go to state 15
    char_token    shift, and go to state 16
    id_token      shift, and go to state 17
    string_token  shift, and go to state 18
    d_num_token   shift, and go to state 19
    i_num_token   shift, and go to state 20
    '('           shift, and go to state 21

    $default  reduce using rule 36 (E)

    Block      go to state 74
    Loop_or_E  go to state 23
    Loop       go to state 24
    TypeArg    go to state 25
    E          go to state 26


State 74

    4 Block: Block . Loop_or_E
    8 Loop: if_token '(' E ')' '{' Block '}' else_token '{' Block . '}'

    if_token      shift, and go to state 12
    while_token   shift, and go to state 13
    int_token     shift, and go to state 14
    double_token  shift, and go to state 15
    char_token    shift, and go to state 16
    id_token      shift, and go to state 17
    string_token  shift, and go to state 18
    d_num_token   shift, and go to state 19
    i_num_token   shift, and go to state 20
    '}'           shift, and go to state 75
    '('           shift, and go to state 21

    $default  reduce using rule 36 (E)

    Loop_or_E  go to state 36
    Loop       go to state 24
    TypeArg    go to state 25
    E          go to state 26


State 75

    8 Loop: if_token '(' E ')' '{' Block '}' else_token '{' Block '}' .

    $default  reduce using rule 8 (Loop)
